--- a/Wheels/Wheels.csproj
+++ b/Wheels/Wheels.csproj
@@ -31,6 +31,14 @@
     <Compile Remove="Migrations\20180730205338_SeedDatabase.Designer.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ClientApp\app\components\app\app.error-handler.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\components\app\app.error-handler.ts" />
+  </ItemGroup>
+
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
